# LoopPerforationExampleApp

./: README.md  build.gradle  settings.gradle
Common/: build.gradle
Common/src/main/aidl/com/example/: IMyService.aidl  LoopPerfFactor.aidl
Common/src/main/cpp/includes/: AllPerforations.h  ComplexType.h  LoopPerfFactor.h
Common/src/main/java/com/example/: AllPerforations.java  LoopPerfFactor.java
LoopPerforationLibrary/: build.gradle
LoopPerforationLibrary/src/androidTest/java/com/diploma/loopperforationlibrary/: ExampleInstrumentedTest.java
LoopPerforationLibrary/src/main/: AndroidManifest.xml
LoopPerforationLibrary/src/main/cpp/: CMakeLists.txt  loopperforationlibrary.cpp
LoopPerforationLibrary/src/main/java/com/diploma/loopperforationlibrary/: MyService.java  NativeLib.java  (+3 more)
NdkBinderClient/: build.gradle  local.properties
NdkBinderClient/src/main/: AndroidManifest.xml
NdkBinderClient/src/main/cpp/: CMakeLists.txt  LoopPerf.c  LoopPerf.h  native-lib.cpp
NdkBinderClient/src/main/cpp/perforation/: LoopInfo.cpp  LoopInfo.h  perforation_lib.cpp  perforation_lib.h
NdkBinderClient/src/main/cpp/tests/adjustbrightness/: adjustBrightness.cpp  adjustBrightness.h
NdkBinderClient/src/main/cpp/tests/blackscholes/: blackScholes.cpp  blackScholes.h
NdkBinderClient/src/main/cpp/tests/imagetests/: imagetests.cpp  imagetests.h
NdkBinderClient/src/main/cpp/tests/montecarlo/: montecarlo.cpp  montecarlo.h
NdkBinderClient/src/main/res/layout/: activity_main.xml
NdkBinderClient/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
